--- a/Question2_Ans/index.html
+++ b/Question2_Ans/index.html
@@ -74,6 +74,10 @@
                     <input  class="c4" type="checkbox" name="Post Graduation">Post Graduation </td>
                 </tr>
                 <tr>
+                    <td><label for="color">Color Picker</label></td>
+                    <td><input required type="color" name="color"  id="color" ></td>
+                </tr>
+                <tr>
                     <td><input class="btn" type="submit" value="Register" id="sub" >
                     <input class="btn" type="reset" value="Reset" id="res" ></td> 
                 </tr>
